# Fenix-backend

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/api/v1/: auth.py
app/models/: order.py  product.py  user.py
app/schemas/: user.py
app/services/: auth.py
